--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,6 +1,6 @@
 <div xmlns:th="http://www.w3.org/1999/xhtml">
     <ul th:fragment="listaErros(campo)" th:if="${#fields.hasErrors(campo)}">
-        <li class="error" th:each="err : ${#fields.errors(campo)}" th:text="${err}"/>
+        <li class="error" th:each="err : ${#fields.errors(campo)}" th:text="${err}"></li>
     </ul>
 
     <head th:fragment="header(titulo)">
