--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -3,21 +3,25 @@
     <head th:replace="~{fragments :: header('Dashboard')}"></head>
 
     <body class="bg-slate-50">
-        <header class="flex px-2 mb-4">
-            <span class="font-bold text-3xl text-center mt-1">
-                Página Administrativa
+        <header class="flex px-2 mb-4 py-2 bg-blue-500">
+            <span class="font-bold text-3xl text-center text-white">
+                Portal Administrativo
             </span>
 
             <div class="grow"></div>
 
-            <a href="/logout" class="text-blue-400 underline font-semibold">
+            <a href="/logout" class="text-white underline font-semibold leading-loose">
                 Sair
             </a>
         </header>
 
         <div class="mx-2">
-            <a href="/cadastro/dentista" class="mb-4 bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-end"> Cadastro de Dentista </a>
+            <a
+                href="/cadastro/dentista"
+                class="mb-4 bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-end"
+            >
+                Cadastro de Dentista
+            </a>
         </div>
-        
     </body>
 </html>
