--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,6 +1,6 @@
 <div xmlns:th="http://www.w3.org/1999/xhtml">
     <ul th:fragment="listaErros(campo)" th:if="${#fields.hasErrors(campo)}">
-        <li class="error" th:each="err : ${#fields.errors(campo)}" th:text="${err}"></li>
+        <li class="text-rose-500 mb-4" th:each="err : ${#fields.errors(campo)}" th:text="${err}"></li>
     </ul>
 
     <head th:fragment="header(titulo)">
@@ -11,8 +11,5 @@
         <title th:text="${titulo}"></title>
 
         <link th:href="@{/css/tailwind.css}" rel="stylesheet" />
-<!--        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-<!--        <link href="https://code.getmdl.io/1.3.0/material.blue-deep_purple.min.css" rel="stylesheet"/>-->
-<!--        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
     </head>
 </div>
