--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,65 +2,57 @@
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
     <head th:replace="~{fragments :: header('Login')}"></head>
 
-    <body class="bg-slate-50">
-        <h1 class="font-bold text-3xl text-center mt-10">
-            Sistema Gerenciador de Consultório Odontológico
-        </h1>
+    <body class="bg-sky-100">
+        <div class="flex h-screen flex-col items-center justify-center">
+            <h1
+                class="font-bold text-3xl text-center mb-10 max-w-md text-slate-800"
+            >
+                Sistema Gerenciador de Consultório Odontológico
+            </h1>
 
-        <div class="flex flex-col items-center mt-40 justify-center">
             <div class="w-full max-w-xs">
-                <span th:if="${error}">Erro ao logar, tente novamente.</span>
-
                 <form
                     method="POST"
                     th:action="@{/login}"
-                    class="bg-white shadow-md px-8 pt-6 pb-8 rounded"
+                    class="bg-white shadow-md px-8 pt-6 pb-8 rounded flex flex-col"
                 >
-                    <div class="font-bold mb-4">Login</div>
+                    <label class="font-medium text-slate-700 block" for="cpf">
+                        CPF:
+                    </label>
+                    <input
+                        class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4"
+                        id="cpf"
+                        maxlength="14"
+                        name="cpf"
+                        placeholder="000.000.000-00"
+                        type="text"
+                    />
 
-                    <div class="mb-4">
-                        <label
-                            class="font-medium text-gray-700 block"
-                            for="cpf"
-                        >
-                            CPF:
-                        </label>
-                        <input
-                            class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                            id="cpf"
-                            maxlength="14"
-                            name="cpf"
-                            placeholder="000.000.000-00"
-                            type="text"
-                        />
-                    </div>
+                    <label class="block font-medium text-slate-700" for="senha">
+                        Senha:
+                    </label>
+                    <input
+                        class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4"
+                        id="senha"
+                        name="senha"
+                        placeholder="********"
+                        type="password"
+                    />
 
-                    <div class="mb-4">
-                        <label
-                            class="block font-medium text-gray-700"
-                            for="senha"
-                        >
-                            Senha:
-                        </label>
-                        <input
-                            class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                            id="senha"
-                            name="senha"
-                            placeholder="********"
-                            type="password"
-                        />
+                    <div class="text-rose-500 mb-4" th:if="${error}">
+                        Usuário e/ou senha incorreto
                     </div>
 
                     <input
                         type="submit"
-                        class="mb-4 bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        class="self-center mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
                         value="Entrar"
                     />
 
-                    <div class="text-gray-500">
+                    <div class="text-slate-500">
                         Não possui um cadastro?
                         <a
-                            class="text-blue-400 underline font-semibold"
+                            class="text-blue-400 hover:text-blue-500 underline font-semibold"
                             href="/cadastro/paciente"
                         >
                             Registre-se
