--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -3,7 +3,9 @@
     <head th:replace="~{fragments :: header('Dashboard')}"></head>
 
     <body class="bg-sky-100">
-        <header class="bg-white flex px-2 mb-16 py-2 border-b-2 border-b-blue-200 mx-20 shadow">
+        <header
+            class="bg-white flex px-2 mb-16 py-2 border-b-2 border-b-blue-200 mx-20 shadow"
+        >
             <span class="font-bold text-3xl text-center text-blue-400">
                 Portal Administrativo
             </span>
