--- a/src/main/resources/templates/cadastroPaciente.html
+++ b/src/main/resources/templates/cadastroPaciente.html
@@ -295,7 +295,7 @@
                     <input
                         type="submit"
                         class="inline bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-center"
-                        value="Registrar"
+                        value="Cadastrar"
                     />
                 </form>
             </div>
